--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="./index.css"/>
 </head>
 <body>
-    <div id="root"></div>
+    <div id="root">
+        <h1>Not Rendered Yet</h1>
+    </div>
 
     <!-- 
         putting here will throw error as React will be defined with the cdn scripts 
@@ -33,7 +35,7 @@
     <!-- Browser Script -->
     <!-- <script src="./app.js"></script> -->
     <!-- To let the browser know that app.js is a module -->
-    <script type="module" src="./app.js"></script>
+    <script type="module" src="./App.js"></script>
 
 </body>
 </html>
