--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Browser Script -->
     <!-- <script src="./app.js"></script> -->
     <!-- To let the browser know that app.js is a module -->
-    <script type="module" src="./App.js"></script>
+    <script type="module" src="./src/App.js"></script>
 
 </body>
 </html>
